2011-11-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCast.c,
	  src/SDCCopt.c:
	  Error message for implicit casts between named address spaces, fix live-range analysis (regression tests passing now).

2011-11-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Error message for attemting to use named address spacces for auto variables.

2011-11-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c:
	  Fix broken control and data flow handling (regression tests passing now, exept for bug-895992.c).

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c:
	  Improve handling of variables in named address space passed as parameters.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c:
	  Avoid emitting some unecessary bank switching calls.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCast.c:
	  Keep global named address spaces alive over functions.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCopt.c:
	  Debug message cleanup, reenable address space splitting.

2011-11-14 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt,
	* device/non-free/include/pic14/pic16f145[589].h,
	* device/non-free/include/pic14/pic16f178[23].h,
	* device/non-free/lib/pic14/libdev/Makefile.in,
	* device/non-free/lib/pic14/libdev/devices.txt,
	* device/non-free/lib/pic14/libdev/pic16f145[589].c,
	* device/non-free/lib/pic14/libdev/pic16f178[23].c:
	  add support for 16f145[589] and 16f178[23] devices

	* device/non-free/include/pic14/pic12f683.h,
	* device/non-free/lib/pic14/libdev/pic12f683.c:
	  updated from new sources

	* doc/sdccman.lyx:
	  update device list, clarify use of NO_LEGACY_NAMES
